--- a/src/main/resources/static/css/forgotPassword.css
+++ b/src/main/resources/static/css/forgotPassword.css
@@ -1,9 +1,8 @@
 @charset "ISO-8859-1";
 
 body {
-	background:
-		url(https://wallpaper.dog/large/5486500.png);
-		background-attachment: fixed;
+		 background: linear-gradient(135deg, #71b7e6, #9b59b6);
+		 background-attachment: fixed;
 		 background-repeat: no-repeat;
 }
 header{
